[gd_scene load_steps=11 format=2]

[ext_resource path="res://default.tres" type="Theme" id=1]
[ext_resource path="res://info/ui/num.tscn" type="PackedScene" id=2]
[ext_resource path="res://info/ui/data.tscn" type="PackedScene" id=3]
[ext_resource path="res://info/ui/path.tscn" type="PackedScene" id=4]
[ext_resource path="res://info/ui/linetext.tscn" type="PackedScene" id=5]
[ext_resource path="res://info/ui/textedit.tscn" type="PackedScene" id=6]
[ext_resource path="res://info/ui/option_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://info/armor_info/armor_info.gd" type="Script" id=8]
[ext_resource path="res://info/armor_info/vbox2.gd" type="Script" id=9]
[ext_resource path="res://info/bg.tres" type="StyleBox" id=10]

[node name="armor_info" type="ScrollContainer"]
margin_left = 166.0
margin_top = 62.0
margin_right = 1024.0
margin_bottom = 596.0
custom_styles/bg = ExtResource( 10 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 850.0
margin_bottom = 616.0
custom_constants/separation = 0

[node name="head" type="Control" parent="VBoxContainer"]
margin_right = 850.0
margin_bottom = 32.0
rect_min_size = Vector2( 850, 32 )

[node name="delete" type="Button" parent="VBoxContainer/head"]
margin_left = 790.0
margin_top = 4.0
margin_right = 845.0
margin_bottom = 29.0
theme = ExtResource( 1 )
text = "删除"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/head"]
margin_left = 50.0
margin_right = 82.0
margin_bottom = 32.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 850.0
margin_bottom = 568.0
custom_constants/separation = 0

[node name="offset" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 50.0
margin_bottom = 536.0
rect_min_size = Vector2( 50, 0 )
mouse_filter = 2
custom_constants/separation = 4

[node name="vbox0" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 50.0
margin_right = 350.0
margin_bottom = 536.0
rect_min_size = Vector2( 300, 0 )
mouse_filter = 2
custom_constants/separation = 4

[node name="ui0" type="Label" parent="VBoxContainer/HBoxContainer/vbox0"]
margin_right = 300.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
hint_tooltip = "556654645654654654654654654654654654"
mouse_filter = 1
theme = ExtResource( 1 )
text = "唯一key(不能重复"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui1" type="Label" parent="VBoxContainer/HBoxContainer/vbox0"]
margin_top = 36.0
margin_right = 300.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = "名字"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui2" type="Label" parent="VBoxContainer/HBoxContainer/vbox0"]
margin_top = 72.0
margin_right = 300.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = "详情"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui3" type="Label" parent="VBoxContainer/HBoxContainer/vbox0"]
margin_top = 108.0
margin_right = 300.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = "图片"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui11" type="Label" parent="VBoxContainer/HBoxContainer/vbox0"]
margin_top = 144.0
margin_right = 300.0
margin_bottom = 176.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = "材质图片"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui5" type="Label" parent="VBoxContainer/HBoxContainer/vbox0"]
margin_top = 180.0
margin_right = 300.0
margin_bottom = 212.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = "护甲类型"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui13" type="Label" parent="VBoxContainer/HBoxContainer/vbox0"]
margin_top = 216.0
margin_right = 300.0
margin_bottom = 248.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = "耐久"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui4" type="Label" parent="VBoxContainer/HBoxContainer/vbox0"]
margin_top = 252.0
margin_right = 300.0
margin_bottom = 284.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = "质量"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui14" type="Label" parent="VBoxContainer/HBoxContainer/vbox0"]
margin_top = 288.0
margin_right = 300.0
margin_bottom = 320.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = "损坏后"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui10" type="Label" parent="VBoxContainer/HBoxContainer/vbox0"]
margin_top = 324.0
margin_right = 300.0
margin_bottom = 356.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = "燃料[热值,时间]"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui9" type="Label" parent="VBoxContainer/HBoxContainer/vbox0"]
margin_top = 360.0
margin_right = 300.0
margin_bottom = 392.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = "食物"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui12" type="Label" parent="VBoxContainer/HBoxContainer/vbox0"]
margin_top = 396.0
margin_right = 300.0
margin_bottom = 428.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = "合成"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui6" type="Label" parent="VBoxContainer/HBoxContainer/vbox0"]
margin_top = 432.0
margin_right = 300.0
margin_bottom = 464.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = "脚本"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui7" type="Label" parent="VBoxContainer/HBoxContainer/vbox0"]
margin_top = 468.0
margin_right = 300.0
margin_bottom = 500.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = "翻译名英"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui8" type="Label" parent="VBoxContainer/HBoxContainer/vbox0"]
margin_top = 504.0
margin_right = 300.0
margin_bottom = 536.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = "翻译详情英"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox1" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 350.0
margin_right = 366.0
margin_bottom = 536.0
mouse_filter = 2
custom_constants/separation = 4

[node name="ui12" type="Label" parent="VBoxContainer/HBoxContainer/vbox1"]
margin_right = 16.0
margin_bottom = 32.0
rect_min_size = Vector2( 16, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = ":"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui16" type="Label" parent="VBoxContainer/HBoxContainer/vbox1"]
margin_top = 36.0
margin_right = 16.0
margin_bottom = 68.0
rect_min_size = Vector2( 16, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = ":"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui15" type="Label" parent="VBoxContainer/HBoxContainer/vbox1"]
margin_top = 72.0
margin_right = 16.0
margin_bottom = 104.0
rect_min_size = Vector2( 16, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = ":"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui14" type="Label" parent="VBoxContainer/HBoxContainer/vbox1"]
margin_top = 108.0
margin_right = 16.0
margin_bottom = 140.0
rect_min_size = Vector2( 16, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = ":"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui13" type="Label" parent="VBoxContainer/HBoxContainer/vbox1"]
margin_top = 144.0
margin_right = 16.0
margin_bottom = 176.0
rect_min_size = Vector2( 16, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = ":"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui9" type="Label" parent="VBoxContainer/HBoxContainer/vbox1"]
margin_top = 180.0
margin_right = 16.0
margin_bottom = 212.0
rect_min_size = Vector2( 16, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = ":"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui11" type="Label" parent="VBoxContainer/HBoxContainer/vbox1"]
margin_top = 216.0
margin_right = 16.0
margin_bottom = 248.0
rect_min_size = Vector2( 16, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = ":"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui1" type="Label" parent="VBoxContainer/HBoxContainer/vbox1"]
margin_top = 252.0
margin_right = 16.0
margin_bottom = 284.0
rect_min_size = Vector2( 16, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = ":"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui2" type="Label" parent="VBoxContainer/HBoxContainer/vbox1"]
margin_top = 288.0
margin_right = 16.0
margin_bottom = 320.0
rect_min_size = Vector2( 16, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = ":"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui3" type="Label" parent="VBoxContainer/HBoxContainer/vbox1"]
margin_top = 324.0
margin_right = 16.0
margin_bottom = 356.0
rect_min_size = Vector2( 16, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = ":"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui4" type="Label" parent="VBoxContainer/HBoxContainer/vbox1"]
margin_top = 360.0
margin_right = 16.0
margin_bottom = 392.0
rect_min_size = Vector2( 16, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = ":"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui5" type="Label" parent="VBoxContainer/HBoxContainer/vbox1"]
margin_top = 396.0
margin_right = 16.0
margin_bottom = 428.0
rect_min_size = Vector2( 16, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = ":"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui10" type="Label" parent="VBoxContainer/HBoxContainer/vbox1"]
margin_top = 432.0
margin_right = 16.0
margin_bottom = 464.0
rect_min_size = Vector2( 16, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = ":"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui6" type="Label" parent="VBoxContainer/HBoxContainer/vbox1"]
margin_top = 468.0
margin_right = 16.0
margin_bottom = 500.0
rect_min_size = Vector2( 16, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = ":"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui7" type="Label" parent="VBoxContainer/HBoxContainer/vbox1"]
margin_top = 504.0
margin_right = 16.0
margin_bottom = 536.0
rect_min_size = Vector2( 16, 32 )
mouse_filter = 1
theme = ExtResource( 1 )
text = ":"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 366.0
margin_right = 622.0
margin_bottom = 536.0
mouse_filter = 2
theme = ExtResource( 1 )
custom_constants/separation = 4
script = ExtResource( 9 )

[node name="ui0" parent="VBoxContainer/HBoxContainer/vbox2" instance=ExtResource( 5 )]

[node name="ui1" parent="VBoxContainer/HBoxContainer/vbox2" instance=ExtResource( 5 )]
margin_top = 36.0
margin_bottom = 68.0

[node name="ui2" parent="VBoxContainer/HBoxContainer/vbox2" instance=ExtResource( 6 )]

[node name="ui3" parent="VBoxContainer/HBoxContainer/vbox2" instance=ExtResource( 4 )]
margin_top = 108.0
margin_bottom = 140.0

[node name="ui14" parent="VBoxContainer/HBoxContainer/vbox2" instance=ExtResource( 4 )]
margin_top = 144.0
margin_bottom = 176.0

[node name="ui4" parent="VBoxContainer/HBoxContainer/vbox2" instance=ExtResource( 7 )]
margin_top = 180.0
margin_bottom = 212.0
TYPE = "armor"

[node name="ui5" parent="VBoxContainer/HBoxContainer/vbox2" instance=ExtResource( 2 )]
margin_top = 216.0
margin_bottom = 248.0
step = 1.0

[node name="ui6" parent="VBoxContainer/HBoxContainer/vbox2" instance=ExtResource( 2 )]
margin_top = 252.0
margin_bottom = 284.0

[node name="ui7" parent="VBoxContainer/HBoxContainer/vbox2" instance=ExtResource( 3 )]
margin_top = 288.0
margin_bottom = 320.0
TYPE = "damage"

[node name="ui8" parent="VBoxContainer/HBoxContainer/vbox2" instance=ExtResource( 3 )]
margin_top = 324.0
margin_bottom = 356.0
TYPE = "fuel"

[node name="ui9" parent="VBoxContainer/HBoxContainer/vbox2" instance=ExtResource( 3 )]
margin_top = 360.0
margin_bottom = 392.0
TYPE = "food"

[node name="ui10" parent="VBoxContainer/HBoxContainer/vbox2" instance=ExtResource( 3 )]
margin_top = 396.0
margin_bottom = 428.0
TYPE = "composite"

[node name="ui11" parent="VBoxContainer/HBoxContainer/vbox2" instance=ExtResource( 4 )]
margin_top = 432.0
margin_bottom = 464.0

[node name="ui12" parent="VBoxContainer/HBoxContainer/vbox2" instance=ExtResource( 5 )]
margin_top = 468.0
margin_bottom = 500.0

[node name="ui13" parent="VBoxContainer/HBoxContainer/vbox2" instance=ExtResource( 6 )]
margin_top = 504.0
margin_bottom = 536.0

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 568.0
margin_right = 850.0
margin_bottom = 616.0
rect_min_size = Vector2( 0, 48 )
